Fix spacing in tooltips

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -586,6 +586,10 @@ button:hover:enabled {
   }
 }
 
+.tooltip-spacer {
+  height: 15px;
+}
+
 .extra-locations {
   float: left;
   background-color: rgba(160, 160, 160, 0.85);
